--- a/build.yaml
+++ b/build.yaml
@@ -3366,7 +3366,7 @@ steps:
          --project {{ global.project }} \
        | xargs -n2 -r sh -c 'gcloud -q compute instances delete --zone "$1" --project {{ global.project }} "$2" || true' argv0
      # gcloud -q compute disks list \
-     #     --filter 'labels.namespace={{ default_ns.name }}' \
+     #     --filter 'labels.namespace={{ default_ns.name }} AND labels.attached=1' \
      #     --format="table[no-heading](zone.basename(), name)" \
      #     --project {{ global.project }} \
      #   | xargs -n2 -r sh -c 'gcloud -q compute disks delete --zone "$1" --project {{ global.project }} "$2" || true' argv0       
