[batch] Add pod disruption budget for batch-driver

--- a/batch/deployment.yaml
+++ b/batch/deployment.yaml
@@ -124,6 +124,16 @@ spec:
            optional: false
            secretName: ssl-config-batch-driver
 ---
+apiVersion: policy/v1beta1
+kind: PodDisruptionBudget
+metadata:
+  name: batch-driver
+spec:
+  minAvailable: 1
+  selector:
+    matchLabels:
+      app: batch
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
