[docker] Infrastructure for moving third party images to gcr

--- a/batch/Dockerfile.worker
+++ b/batch/Dockerfile.worker
@@ -1,4 +1,4 @@
-FROM python:3.7-slim-stretch
+FROM gcr.io/{{ global.project }}/python:3.7-slim-stretch
 
 RUN apt-get update && \
   apt-get -y install \
