--- a/docker/Makefile
+++ b/docker/Makefile
@@ -19,23 +19,25 @@ GENETICS_PUBLIC_IMAGE = gcr.io/$(PROJECT)/genetics-public:$(shell docker images 
 base: base-stmp
 
 base-stmp: Dockerfile.base core-site.xml requirements.txt ../pylintrc ../setup.cfg
-	-docker pull ubuntu:18.04
+	-docker pull gcr.io/$(PROJECT)/ubuntu:18.04
 	-docker pull $(BASE_LATEST)
 	[ "$(shell bash stat-permissions.sh Dockerfile.base)" = "644" ]
 	[ "$(shell bash stat-permissions.sh core-site.xml)" = "644" ]
 	[ "$(shell bash stat-permissions.sh requirements.txt)" = "644" ]
 	[ "$(shell bash stat-permissions.sh ../pylintrc)" = "644" ]
 	[ "$(shell bash stat-permissions.sh ../setup.cfg)" = "644" ]
-	docker build -t base -f Dockerfile.base --cache-from base,$(BASE_LATEST),ubuntu:18.04 ..
+	python3 ../ci/jinja2_render.py '{"global":{"project":"$(PROJECT)"}}' Dockerfile.base Dockerfile.base.out
+	docker build -t base -f Dockerfile.base.out --cache-from base,$(BASE_LATEST),gcr.io/$(PROJECT)/ubuntu:18.04 ..
 	touch base-stmp
 
 .PHONY: service-base
 service-base: base-stmp
+	-docker pull gcr.io/$(PROJECT)/ubuntu:18.04
 	-docker pull $(SERVICE_BASE_LATEST)
 	python3 ../ci/jinja2_render.py '{"base_image":{"image":"base"}}' Dockerfile.service-base Dockerfile.service-base.out
 	[ "$(shell bash stat-permissions.sh Dockerfile.service-base.out)" = "644" ]
 	[ "$(shell bash stat-permissions.sh service-base-requirements.txt)" = "644" ]
-	docker build -t service-base -f Dockerfile.service-base.out --cache-from service-base,$(SERVICE_BASE_LATEST),base,ubuntu:18.04 ..
+	docker build -t service-base -f Dockerfile.service-base.out --cache-from service-base,$(SERVICE_BASE_LATEST),base,gcr.io/$(PROJECT)/ubuntu:18.04 ..
 
 .PHONY: hail-public-image
 hail-public-image:
@@ -43,7 +45,8 @@ hail-public-image:
 	cp ../hail/build/deploy/dist/hail-*-py3-none-any.whl hail/
 	cd hail && tar -cvf wheel-container.tar hail-*-py3-none-any.whl
 	-docker pull $(HAIL_PUBLIC_LATEST)
-	docker build hail -f hail/Dockerfile -t hail-public \
+	python3 ../ci/jinja2_render.py '{"global":{"project":"$(PROJECT)"}}' hail/Dockerfile hail/Dockerfile.out
+	docker build hail -f hail/Dockerfile.out -t hail-public \
      --cache-from hail-public,$(HAIL_PUBLIC_LATEST),ubuntu:18.04 \
      hail
 
