--- a/image-fetcher/Makefile
+++ b/image-fetcher/Makefile
@@ -11,9 +11,10 @@ fetch-image.sh: fetch-image.sh.in
 
 ifeq ($(IN_HAIL_CI),1)
 build: fetch-image.sh
-	docker pull alpine:3.8
+	docker pull gcr.io/$(PROJECT)/alpine:3.8
 	-docker pull $(FETCH_LATEST)
-	docker build . -t image-fetcher --cache-from image-fetcher,$(FETCH_LATEST),alpine:3.8
+	python3 ../ci/jinja2_render.py '{"global":{"project":"$(PROJECT)"}}' Dockerfile Dockerfile.out
+	docker build -f Dockerfile.out . -t image-fetcher --cache-from image-fetcher,$(FETCH_LATEST),gcr.io/$(PROJECT)/alpine:3.8
 else
 build: fetch-image.sh
 	docker build . -t image-fetcher
