--- a/ci/test/resources/build.yaml
+++ b/ci/test/resources/build.yaml
@@ -11,7 +11,7 @@ steps:
    name: inline_image
    dockerFile:
      inline: |
-       FROM ubuntu:18.04
+       FROM gcr.io/{{ global.project }}/ubuntu:18.04
        RUN apt-get update && apt-get install -y git
    contextPath: .
  - kind: runImage
