[Benchmark] update commits (#9638)
* wip

* wip

* wip

* wip

* fix typo

* await batch client

* improve

* improve

* improve

* improve

* improve

* remove comments

* changes

* changes

* make sleep 180

* modify update-commits

* sleep 5

--- a/benchmark-service/deployment.yaml
+++ b/benchmark-service/deployment.yaml
@@ -34,6 +34,17 @@ spec:
             value: "{{ code.sha }}"
           - name: HAIL_CI_OAUTH_TOKEN
             value: /secrets/oauth-token/oauth-token
+{% if deploy %}
+          - name: HAIL_BENCHMARK_BUCKET_NAME
+            value: hail-test
+{% else %}
+          - name: HAIL_BENCHMARK_BUCKET_NAME
+            value: hail-test-dmk9z
+{% endif %}
+{% if deploy %}
+          - name: START_POINT
+            value: "2020-11-01T00:00:00Z"
+{% endif %}
           ports:
             - containerPort: 5000
           resources:
@@ -56,8 +67,11 @@ spec:
             - name: benchmark-gsa-key
               mountPath: /benchmark-gsa-key
               readOnly: true
-            - mountPath: /secrets/oauth-token
-              name: hail-ci-0-1-github-oauth-token
+            - name: hail-ci-0-1-github-oauth-token
+              mountPath: /secrets/oauth-token
+              readOnly: true
+            - name: benchmark-tokens
+              mountPath: /user-tokens
               readOnly: true
           readinessProbe:
             tcpSocket:
@@ -80,3 +94,6 @@ spec:
         - name: hail-ci-0-1-github-oauth-token
           secret:
             secretName: hail-ci-0-1-github-oauth-token
+        - name: benchmark-tokens
+          secret:
+            secretName: benchmark-tokens
