--- a/router/deployment.yaml
+++ b/router/deployment.yaml
@@ -243,6 +243,20 @@ spec:
   selector:
     app: shuffler
 ---
+apiVersion: v1
+kind: Service
+metadata:
+  name: atgu
+  labels:
+    app: atgu
+spec:
+  ports:
+  - port: 443
+    protocol: TCP
+    targetPort: 5000
+  selector:
+    app: atgu
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
