--- a/router/router.nginx.conf.in
+++ b/router/router.nginx.conf.in
@@ -316,3 +316,16 @@ server {
     listen 443 ssl;
     listen [::]:443 ssl;
 }
+
+server {
+    server_name atgu.*;
+    client_max_body_size 8m;
+
+    location / {
+        proxy_pass https://atgu/;
+        include /etc/nginx/proxy.conf;
+    }
+
+    listen 443 ssl;
+    listen [::]:443 ssl;
+}
