--- a/benchmark-service/deployment.yaml
+++ b/benchmark-service/deployment.yaml
@@ -39,6 +39,8 @@ spec:
             value: hail-test
           - name: START_POINT
             value: "2020-11-01T00:00:00Z"
+          - name: INSTANCE_ID
+            value: "WetqnMQMoqq2"
 {% else %}
           - name: HAIL_BENCHMARK_BUCKET_NAME
             value: hail-test-dmk9z
