--- a/benchmark-service/Dockerfile
+++ b/benchmark-service/Dockerfile
@@ -7,13 +7,13 @@ COPY benchmark-service/setup.py benchmark-service/MANIFEST.in  /benchmark-servic
 RUN pip3 install --no-cache-dir /benchmark-service && \
     rm -rf /benchmark-service
 
-RUN pip3 install plotly
+#RUN pip3 install plotly
 
-RUN pip3 install pandas
+#RUN pip3 install pandas
 
-RUN pip3 install scipy
+#RUN pip3 install scipy
 
-RUN pip3 install numpy
+#RUN pip3 install numpy
 
 EXPOSE 5000
 
