--- a/build.yaml
+++ b/build.yaml
@@ -2065,7 +2065,7 @@ steps:
          finally:
              await bc.close()
      async def main():
-         await asyncio.gather([
+         await asyncio.gather(*[
              create(billing_project="benchmark", user="benchmark")
          ])
      async_to_blocking(main())
