[tcp-proxy] implement tcp-proxy
fixes

fixes

fix

better error messages

fix

--- a/build.yaml
+++ b/build.yaml
@@ -3534,3 +3534,24 @@ steps:
     - default_ns
     - deploy_router
     - deploy_auth
+ - kind: buildImage
+   name: tcp_proxy_image
+   dockerFile: tcp_proxy/Dockerfile
+   contextPath: tcp_proxy
+   publishAs: txp-proxy
+   dependsOn:
+     - service_base_image
+ - kind: deploy
+   name: deploy_tcp_proxy
+   namespace:
+     valueFrom: default_ns.name
+   config: tcp_proxy/deployment.yaml
+   wait:
+    - kind: Service
+      name: tcp-proxy
+      for: alive
+   dependsOn:
+    - default_ns
+    - deploy_auth
+    - tcp_proxy_image
+    - create_certs
