--- a/internal-gateway/service.yaml
+++ b/internal-gateway/service.yaml
@@ -17,6 +17,10 @@ spec:
     port: 443
     protocol: TCP
     targetPort: 443
+  - name: tcp
+    port: 5000
+    protocol: TCP
+    targetPort: 5000
   selector:
     app: internal-gateway
   loadBalancerIP: "{{ global.internal_ip }}"
