--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -7,6 +7,29 @@ events {
   worker_connections 768;
 }
 
+stream {
+    server {
+        listen 5000 ssl;
+        proxy_pass tcp-proxy:5000;
+        proxy_timeout 3s;
+        proxy_connect_timeout 1s;
+        proxy_ssl on;
+        include /ssl-config/ssl-config-proxy.conf;
+
+        ssl_certificate /etc/letsencrypt/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/privkey.pem;
+
+        # this block duplicates options from /etc/letsencrypt/options-ssl-nginx.conf
+        # but the session cache cannot be shared between stream and http
+        ssl_session_cache shared:stream_nginx_SSL:1m;
+        ssl_session_timeout 1440m;
+        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers "ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES256-SHA:ECDHE-ECDSA-DES-CBC3-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:DES-CBC3-SHA:!DSS";
+
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    }
+}
 
 http {
   sendfile on;
