--- a/internal-gateway/nginx.conf
+++ b/internal-gateway/nginx.conf
@@ -7,6 +7,17 @@ events {
   worker_connections 768;
 }
 
+stream {
+    server {
+        listen 5000;
+        proxy_pass tcp-proxy:5000;
+        proxy_timeout 3s;
+        proxy_connect_timeout 1s;
+        proxy_ssl on;
+        include /ssl-config/ssl-config-proxy.conf;
+    }
+}
+
 http {
 
   sendfile on;
