--- a/build.yaml
+++ b/build.yaml
@@ -2089,8 +2089,13 @@ steps:
          finally:
              await bc.close()
      async def main():
+{% if deploy %}
+         benchmark_limit = None
+{% else %}
+         benchmark_limit = 5
+{% endif %}
          await asyncio.gather(*[
-             create(billing_project="benchmark", user="benchmark")
+             create(billing_project="benchmark", user="benchmark", limit=benchmark_limit)
          ])
      async_to_blocking(main())
      EOF
