--- a/atgu/Dockerfile
+++ b/atgu/Dockerfile
@@ -2,7 +2,6 @@ FROM {{ service_base_image.image }}
 
 COPY atgu/setup.py atgu/MANIFEST.in /atgu/
 COPY atgu/atgu /atgu/atgu/
-RUN pip3 install --no-cache-dir /atgu && \
-  rm -rf /atgu
+RUN hail-pip-install /atgu && rm -rf /atgu
 
 EXPOSE 5000
