[services] ensure all make deploy require & use NAMESPACE

--- a/admin-pod/Makefile
+++ b/admin-pod/Makefile
@@ -4,6 +4,7 @@ SERVICE_BASE_IMAGE = gcr.io/$(PROJECT)/service-base:$(shell docker images -q --n
 
 .PHONY: deploy
 deploy:
+	! [ -z $(NAMESPACE) ]  # call this like: make deploy NAMESPACE=default
 	$(MAKE) -C ../docker push
 	python3 ../ci/jinja2_render.py '{"service_base_image":{"image":"$(SERVICE_BASE_IMAGE)"}}' admin-pod.yaml admin-pod.yaml.out
-	kubectl -n default apply -f admin-pod.yaml.out
+	kubectl -n $(NAMESPACE) apply -f admin-pod.yaml.out
