--- a/hail/build.gradle
+++ b/hail/build.gradle
@@ -101,6 +101,19 @@ String breezeVersion() {
   return cachedBreezeVersion
 }
 
+String elasticHadoopVersion() {
+    def elasticMajorVersion = System.getProperty("elasticsearch.major-version", "6")
+    if (elasticMajorVersion == "6") {
+        return "6.8.13"
+    }
+    else if (elasticMajorVersion == "7") {
+        return "7.1.1"
+    }
+    else {
+        throw new UnsupportedOperationException("elasticsearch.major-version must be 6 or 7")
+    }
+}
+
 configurations {
     justSpark
 
@@ -169,7 +182,7 @@ dependencies {
 
     bundled group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
 
-    bundled 'org.elasticsearch:elasticsearch-spark-20_2.11:6.8.13'
+    bundled 'org.elasticsearch:elasticsearch-spark-20_2.11:' + elasticHadoopVersion()
 
     bundled 'com.google.cloud:google-cloud-storage:1.106.0'
 
