Shadow Jar dependency

--- a/hail/Makefile
+++ b/hail/Makefile
@@ -71,7 +71,7 @@ endif
 ifdef HAIL_DEBUG_MODE
 $(SHADOW_JAR): $(JAR_DEBUG_CLASSES)
 endif
-$(SHADOW_JAR): $(SCALA_BUILD_INFO) $(JAR_SOURCES) env/HAIL_DEBUG_MODE
+$(SHADOW_JAR): $(SCALA_BUILD_INFO) $(JAR_SOURCES) env/HAIL_DEBUG_MODE env/ELASTIC_MAJOR_VERSION
 	./gradlew shadowJar $(GRADLE_ARGS)
 ifdef HAIL_DEBUG_MODE
 	$(JAR) -uf $(SHADOW_JAR) -C $(BUILD_DEBUG_PREFIX) is/hail/annotations/Memory.class
