[gateway] codify gateway nginx.conf
Previously, we used the default nginx.conf included by Ubuntu. This
changes us to use the same explicit settings that are used by the
internal-gateway vis-a-vis TLS.

This change also allows me to add (in a future PR) a TCP forwarding
block needed by the forthcoming Hail TCP Proxy.

--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -3,6 +3,7 @@ FROM {{ hail_ubuntu_image.image }}
 RUN hail-apt-get-install nginx
 
 RUN rm -f /etc/nginx/sites-enabled/default
+ADD nginx.conf /etc/nginx/
 ADD gateway.nginx.conf /etc/nginx/conf.d/gateway.conf
 ADD gzip.conf /etc/nginx/conf.d/gzip.conf
 
