--- a/ci/test/resources/build.yaml
+++ b/ci/test/resources/build.yaml
@@ -3,10 +3,6 @@ steps:
    name: default_ns
    namespaceName: default
    public: true
- - kind: createNamespace
-   name: batch_pods_ns
-   namespaceName: batch_pods
-   public: false
  - kind: buildImage
    name: inline_image
    dockerFile:
@@ -149,7 +145,7 @@ steps:
    secrets:
     - name: test-tokens
       namespace:
-        valueFrom: batch_pods_ns.name
+        valueFrom: default_ns.name
       mountPath: /user-tokens
     - name: gce-deploy-config
       namespace:
@@ -159,4 +155,3 @@ steps:
     - service_base_image
     - default_ns
     - deploy_hello
-    - batch_pods_ns
