missing line for benchmark-gsa-key

--- a/build.yaml
+++ b/build.yaml
@@ -416,6 +416,7 @@ steps:
      if [[ $N = 0 ]]; then
          # if benchmark does not exist
          rm -f /user-tokens/tokens.json
+         kubectl -n {{ default_ns.name }} get -o json secret test-gsa-key | jq '{apiVersion, kind, type, data, metadata: {name: "benchmark-gsa-key"}}' | kubectl -n {{ batch_pods_ns.name }} apply -f -
          python3 create-session.py '{"state":"active","username":"benchmark","gsa_email":"benchmark@hail-vdc.iam.gserviceaccount.com","gsa_key_secret_name":"benchmark-gsa-key","tokens_secret_name":"benchmark-tokens"}'
          kubectl -n {{ default_ns.name }} create secret generic benchmark-tokens --from-file=/user-tokens/tokens.json
      fi
