--- a/query/service-account.yaml
+++ b/query/service-account.yaml
@@ -2,3 +2,24 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: query
+---
+kind: Role
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: query
+rules:
+- apiGroups: [""]
+  resources: ["secrets"]
+  verbs: ["get", "list"]
+---
+kind: RoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: query
+subjects:
+- kind: ServiceAccount
+  name: query
+roleRef:
+  kind: Role
+  name: query
+  apiGroup: rbac.authorization.k8s.io
